fix radio input buttons so only one is selectable

--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
         <div class="card form-group">
           <p>What about your favorite music? :</p>
           <div class="radio">
-            <label for="Hip-hop">Hip-hop</label>
-            <input type="radio" id="Hip-hop" value="hip-hop" checked>
+            <label>Hip-hop</label>
+            <input type="radio" id="Hip-hop" name="music" value="hip-hop" checked>
           </div>
 
           <div class="radio">
-            <label for="Rock">Rock</label>
-            <input type="radio" id="Rock" value="rock">
+            <label>Rock</label>
+            <input type="radio" id="Rock" name="music"  value="rock">
           </div>
 
           <div class="radio">
-            <label for="Jazz">Jazz</label>
-            <input type="radio" id="Jazz" value="jazz">
+            <label>Jazz</label>
+            <input type="radio" id="Jazz" name="music"  value="jazz">
           </div>
 
           <div class="radio">
-            <label for="R&B">R&B</label>
-            <input type="radio" id="R&B" value="r&b">
+            <label>R&B</label>
+            <input type="radio" id="R&B" name="music"  value="r&b">
           </div>
         </div>
 
